# bin-patch-gen

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.test  LICENSE  README.md  build.rs  config.toml  docker-compose.yml  update.sh
proc_macros/: Cargo.toml
proc_macros/src/: lib.rs
src/: build_tools.rs  config.rs  jar.rs  lib.rs  main.rs  maven.rs  tests.rs  version.rs
src/util/: dir.rs  mod.rs
src/version/: mod.rs  schema.rs
src/version/schema/: mod.rs  piston.rs  spigot.rs
