[package]
name = "SpigotBinPatchGen"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = "1.0"
reqwest = { version = "0.12.9", features = ["stream"] }
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
scraper = "0.21.0"
regex = { version = "1.11.1", features = [] }
futures-util = "0.3.31"