[package]
name = "bin_patch_gen"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12.9", features = ["stream"] }
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
scraper = "0.21.0"
regex = { version = "1.11.1", features = [] }
futures-util = "0.3.31"
ctor = "0.2.8"
proc_macros = { path = "./proc_macros" }
tracing = "0.1.40"
log = "0.4.22"
env_logger = "0.11.5"
tracing-subscriber = "0.3.18"
chrono = "0.4.38"
zip = "2.2.0"
toml = "0.8.19"
sha1 = "0.10.6"
hex = "0.4.3"
clap = { version = "4.5.21", features = ["derive"] }
qbsdiff = "1.4.2"
bzip2 = "0.4.4"
paste = "1.0.15"
pommes = { git = "https://github.com/SploonMC/pommes" }
serde-xml-rs = "0.6.0"
